style(hotfix/spacing): correct operator spacing

--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -8,8 +8,6 @@
   border-radius: 10px;
   padding: 34px 36px 36px;
   position: relative;
-  /*left: 425px;
-  top: 195px;*/
 }
 
 @media screen and (max-width: 425px) {
@@ -22,7 +20,7 @@
 
 @media screen and (max-width: 320px) {
   .modal__content {
-    width: calc(100% - 40px*2);
+    width: calc(100% - 40px * 2);
     padding: 20px;
   }
 }
